# aws-athena-mcp

./: .gitignore  CURSOR_SETUP.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_server.sh  setup.py
src/: __init__.py
src/athena_mcp/: __init__.py  server.py
src/athena_mcp/core/: __init__.py  config.py  exceptions.py
src/athena_mcp/handlers/: __init__.py  tool_handlers.py
src/athena_mcp/services/: __init__.py  athena_client.py  athena_service.py
src/athena_mcp/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: __init__.py
tests/unit/: __init__.py  test_validators.py
